fix: made spacing css rule work for divider between systray and indicators

--- a/eww/modules/topbar.scss
+++ b/eww/modules/topbar.scss
@@ -31,10 +31,13 @@
         }
     }
 
-    .audio-indicator {
+    .indicators {
         .divider {
             color: $primary-text-color;
-            margin-left: $padding-1;
+
+            &.last {
+                margin-left: $padding-1;
+            }
         }
 
         .icon {
